--- a/starter/glove_demonstration.ipynb
+++ b/starter/glove_demonstration.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "eeae3d9b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Imports\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.decomposition import PCA\n",
@@ -17,13 +19,20 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
-    "\n",
     "from gensim.models import Word2Vec, FastText"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "3047c06b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "14b18d13",
    "metadata": {},
    "outputs": [
@@ -32,10 +41,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\david\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\stada\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\david\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\stada\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -45,7 +54,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4a1d0f0a",
    "metadata": {},
    "outputs": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "48296d12",
    "metadata": {},
    "outputs": [
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9c92acca",
    "metadata": {},
    "outputs": [
@@ -236,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "383ddc6c",
    "metadata": {},
    "outputs": [
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5f5cd2c2",
    "metadata": {},
    "outputs": [
@@ -397,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
